dataprotection/backup-05/03_service_route.yaml
apiVersion: v1
kind: Service
metadata:
  name: bck05-service
spec:
  selector:
    app: bck05-app
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: bck05-route
spec:
  to:
    kind: Service
    name: bck05-service
  port:
    targetPort: 8080
